# libft

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  author  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize.c  ft_lstsize_bonus.c  ft_max.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar.c  (+24 more)
.cquery_cache/@@home@x337@dev@42@libft/: @usr@include@alloca.h.json  @usr@include@bits@byteswap.h.json  @usr@include@bits@confname.h.json  @usr@include@bits@environments.h.json  @usr@include@bits@floatn.h.json  @usr@include@bits@getopt_core.h.json  @usr@include@bits@getopt_posix.h.json  @usr@include@bits@libc-header-start.h.json  @usr@include@bits@pthreadtypes-arch.h.json  @usr@include@bits@pthreadtypes.h.json  @usr@include@bits@select.h.json  @usr@include@bits@stdint-intn.h.json  @usr@include@bits@stdlib-float.h.json  @usr@include@bits@time64.h.json  @usr@include@bits@timesize.h.json  @usr@include@bits@types.h.json  @usr@include@bits@types@__locale_t.h.json  @usr@include@bits@types@__sigset_t.h.json  @usr@include@bits@types@clock_t.h.json  @usr@include@bits@types@clockid_t.h.json  @usr@include@bits@types@locale_t.h.json  @usr@include@bits@types@sigset_t.h.json  @usr@include@endian.h.json  (+20 more)
(+26 files in other folders)
